# claw-spawn

./: .env.example  .gitignore  AUDIT_COMPLETE.md  AUDIT_SUMMARY.md  AUDIT_TODO.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  Makefile  README.md  REVIEW_SUMMARY.md  docker-compose.yml  mvp-plan.md
.claude/agents/: .intacom-agents-synced-claude-v1  .intacom-agents-synced-v1
.gemini/agents/: .intacom-agents-synced-gemini-v1
.github/workflows/: ci.yml
.opencode/agents/: .intacom-agents-synced-opencode-v1
.opencode/commands/: .intacom-commands-synced-v1-opencode
migrations/: 008_remove_unused_config_version_objects.sql
patches/: 0001-critical-security-fixes.patch  0004-testing-observability.patch
scripts/: openclaw-bootstrap.sh
src/: config_repo.rs  droplet_repo.rs  lib.rs  main.rs
src/application/: lifecycle.rs  mod.rs  provisioning.rs
src/domain/: account.rs  bot.rs  droplet.rs  mod.rs
src/infrastructure/: config.rs  crypto.rs  digital_ocean.rs  mod.rs  postgres_config_repo.rs  postgres_droplet_repo.rs  repository.rs
src/server/: http.rs  http_auth.rs  http_errors.rs  http_parse.rs  http_types.rs  mod.rs  state.rs
tests/: integration_tests.rs
